--- a/style.css
+++ b/style.css
@@ -23,6 +23,16 @@ img {
     ratio: 0.78px;
 
  }
+/* Styling for imaage */
+.journey{
+  display: block;  
+  margin: 0 auto;
+  margin-top: 20;
+  height: 630px;
+  width: 1200px;
+  ratio: 1.90px;
+}
+
 /* Styling for h1 */
 h1{
   text-align: center;
@@ -55,4 +65,32 @@ p {
   color: white;
   text-align: center;
   font-size: 20px;
+}
+/* Styling Background Image Map */
+.container {
+  position: relative;
+}
+
+ .content {
+  position:absolute ; /* Position the background text */
+  margin-bottom: 12.25vh; 
+  margin-left: 25vw;
+  bottom: 0; /* At the bottom. Use top:0 to append it to the top */
+  background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
+  color: #f1f1f1; /* Grey text */
+  width: 50%; /* Full width */
+  padding: 20px; /* Some padding */
+}
+/* Styling for Image */
+.church{
+  display: block;  
+  margin: 0 auto;
+  margin-top: 20;
+  height: 630px;
+  width: 1200px;
+  ratio: 1.90px;
+}
+
+.video{
+  text-align: center;
 }
